# unstable-students-psvita

./: .gitignore  CMakeLists.txt  README.md  debug.c  debug.h  file.c  file.h  gioco.c  gioco.h  gitignore  main.c  mazzo.txt  savegame.sav  savegame1.sav  strutture.c  strutture.h
saves/: log.txt  savegame.sav
src/: colori-ansi.h  debug.h  file.c  file.h  gioco.c  gioco.h  grafica.c  grafica.h  main.c  misc.c  misc.h  strutture.c  strutture.h  vita.c  vita.h
